# nrm-benchmarks

./: .gitignore  LICENSE  Makefile.am  README.markdown  autogen.sh  configure.ac  default.nix  shell.nix
.github/workflows/: builds.yml
nix/: libnrm.nix  nrmb.nix
src/: nrm-benchmarks.h  utils.c
src/noprogress/stream/: full.c
src/progress/ones/: add.c  copy.c  scale.c  stream.c  triad.c
src/progress/ones/iterative_solvers/: README  bicgstab.c  cg.c  compile  launch
src/progress/ones/npb/: ep.c  is.c  randdp.c
src/progress/ones/stream/: add.c  copy.c  full.c  scale.c  triad.c
src/progress/phases/iterative_solvers/: bicgstab.c  cg.c  common.h
src/progress/phases/stream/: full.c
